# GCNO

./: .pre-commit-config.yaml  CMakeLists.txt  NormalOrientation-config.cmake.in  README.md
MAIN/: CMakeLists.txt  EAR.hpp  Knn.hpp  MyBaseModel.hpp  MyHalfEdgeModel.hpp  MyMathSupport.hpp  MyPointCloudModel.hpp  MyRPD.hpp  MyRPD_rnn.hpp  PlaneCut.hpp  laplaceIGL.hpp  main.cpp  nanoflann.hpp
MAIN/nanoflann/: .travis.yml
MAIN/nanoflann/.circleci/: config.yml
MAIN/nanoflann/benchmarkTool/: tool.py
MAIN/nanoflann/benchmarkTool/randomTests/: benchmark_fastann_random.cpp  benchmark_flann_random.cpp  benchmark_nanoflann_random.cpp  randomTests.py
MAIN/nanoflann/benchmarkTool/realTests/: realTests.py
MAIN/nanoflann/examples/: KDTreeVectorOfVectorsAdaptor.h  SO2_adaptor_example.cpp  SO3_adaptor_example.cpp  dynamic_pointcloud_example.cpp  matrix_example.cpp  pointcloud_adaptor_example.cpp  pointcloud_example.cpp  pointcloud_kdd_radius.cpp  saveload_example.cpp  utils.h  vector_of_vectors_example.cpp
MAIN/nanoflann/examples/example_with_pkgconfig/: Makefile  pointcloud_example.cpp
MAIN/nanoflann/packaging/: README.txt
MAIN/nanoflann/packaging/debian/: changelog  control  copyright
MAIN/nanoflann/perf-tests/: README.txt  analyze_leafsize_stats.m  analyze_stats.m
MAIN/nanoflann/perf-tests/flann/: Makefile  test_flann.cpp
MAIN/nanoflann/perf-tests/nanoflann/: Makefile  test_leaf_max_size.cpp  test_nanoflann.cpp
MAIN/nanoflann/scripts/: nanoflann.pc.in  prepare_debian.sh  prepare_release.sh  prepare_ubuntu_pkgs_for_ppa.sh
MAIN/nanoflann/tests/: test_main.cpp
MAIN/nanoflann/tests/gtest-1.8.0/include/gtest/: gtest-death-test.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-typed-test.h  gtest.h  gtest_pred_impl.h  gtest_prod.h
MAIN/nanoflann/tests/gtest-1.8.0/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util-generated.h  gtest-param-util.h  gtest-port-arch.h  gtest-port.h  gtest-string.h  gtest-tuple.h  gtest-type-util.h
MAIN/nanoflann/tests/gtest-1.8.0/include/gtest/internal/custom/: gtest-port.h
MAIN/nanoflann/tests/gtest-1.8.0/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc  gtest_main.cc
cmake/: FindBGAL.cmake
data/: WireFrame_trebol.xyz
include/BGAL/Algorithm/BOC/: BOC.h
include/BGAL/BaseShape/: KDTree.h  Line.h  Point.h  Polygon.h  Triangle.h
include/BGAL/CVTLike/: CPD.h  CVT (Xrvitd-PC 的冲突副本 2022-07-25).h  CVT.h
include/BGAL/Draw/: DrawPS.h
include/BGAL/Geodesic/: AbstractMethod.h
include/BGAL/Geodesic/Dijkstra/: Dijkstra.h
include/BGAL/Integral/: Integral.h  Tetrahedron_arbq_rule.h
include/BGAL/Model/: ManifoldModel.h  Model.h  Model_Iterator.h
include/BGAL/Optimization/ALGLIB/: alglibinternal.h  alglibmisc.h  ap.h  dataanalysis.h  diffequations.h  fasttransforms.h  integration.h  interpolation.h  linalg.h  optimization.h  solvers.h  specialfunctions.h  statistics.h
include/BGAL/Optimization/GradientDescent/: GradientDescent.h
include/BGAL/Optimization/LBFGS/: LBFGS.h
include/BGAL/Optimization/LinearSystem/: LinearSystem.h
include/BGAL/PQP/: BV.h  BVTQ.h  GetTime.h  MatVec.h  OBB_Disjoint.h  PQP.h  PQP_Internal.h  RectDist.h  TriDist.h
include/BGAL/PointCloudProcessing/Registration/ICP/: ICP.h
include/BGAL/Reconstruction/MarchingTetrahedra/: MarchingTetrahedra.h
include/BGAL/Tessellation2D/: Side2D.h  Tessellation2D.h
include/BGAL/Tessellation3D/: Side3D.h  Tessellation3D.h
src/Algorithm/: CMakeLists.txt
src/Algorithm/BOC/: BOC.cpp
src/BaseShape/: CMakeLists.txt  KDTree.cpp  Line.cpp  Point.cpp  Polygon.cpp  Triangle.cpp
src/CVTLike/: CMakeLists.txt  CPD.cpp  CVT (Xrvitd-PC 的冲突副本 2022-07-25).cpp  CVT.cpp
src/Draw/: CMakeLists.txt  DrawPS.cpp
src/Geodesic/: AbstractMethod.cpp  CMakeLists.txt
src/Geodesic/Dijkstra/: Dijkstra.cpp
src/Integral/: CMakeLists.txt  Integral.cpp  Tetrahedron_arbq_rule.cpp
src/Model/: CMakeLists.txt  ManifoldModel.cpp  Model.cpp  Model_Iterator.cpp
src/Optimization/: CMakeLists.txt
src/Optimization/ALGLIB/: alglibinternal.cpp  alglibmisc.cpp  ap.cpp  dataanalysis.cpp  diffequations.cpp  fasttransforms.cpp  integration.cpp  interpolation.cpp  linalg.cpp  optimization.cpp  solvers.cpp  specialfunctions.cpp  statistics.cpp
src/Optimization/GradientDescent/: GradientDescent.cpp
src/Optimization/LBFGS/: LBFGS.cpp
src/Optimization/LinearSystem/: LinearSystem.cpp
src/PQP/: BV.cpp  Build.cpp  CMakeLists.txt  PQP.cpp  TriDist.cpp
src/PointCloudProcessing/: CMakeLists.txt
src/PointCloudProcessing/Registration/ICP/: ICP.cpp
src/Reconstruction/: CMakeLists.txt
src/Reconstruction/MarchingTerahedra/: MarchingTetrahedra.cpp
src/Tessellation2D/: CMakeLists.txt  Side2D.cpp  Tessellation2D.cpp
src/Tessellation3D/: CMakeLists.txt  Side3D.cpp  Tessellation3D.cpp
test/: main.cpp  main.txt
test/data/: BKLineColorBar.mtl  ICPTest.txt  KDTreeTest.txt
